<resources>
    <string name="app_name">项目管理</string>
    <string name="book">管理手册</string>
    <string name="professor">专家</string>
    <string name="team">团队</string>
    <string name="personage">个人</string>
    <string name="table">表格</string>
    <string name="mailList">通讯录</string>
    <string name="photograph">拍照</string>
    <string name="more">更多</string>
    <string name="projectTeam">项目成员</string>
    <string name="text_professor_chen">
        ### 陈 阳\n
        >  简介，教授（二级），博士生导师。重庆邮电大学通信与信息工程学院执行院长，兼重庆邮电大学电子信息与网络工程研究院院长、重庆市移动通信技术重点实验室主任。 \n\n
        　　2002年获得国务院政府特殊津贴专家称号，2006年入选教育部“新世纪优秀人才支持计划”，2008年入选重庆市学术技术带头人，2010年入选重庆高校“巴渝学者”，2013年入选重庆市“两江学者”特聘教授。现为国际IEEE高级会员、中国通信学会会士，《中国邮电高校学报》(英文版)、《重庆邮电大学学报（自然科学版）》编委，《中兴通讯技术》编委会副主任，教育部高等学校电子信息类专业教学指导委员会委员、重庆市政府第四届决策咨询专家委员会专家。\n\n
        　　陈阳教授长期从事通信网理论与技术、无线通信、多媒体信息传输与处理等领域的科研和教学工作。先后主持完成国家及省部级20余项科研项目，获得国家科技进步二等奖1项、重庆市技术发明一等奖1项、重庆市科技进步一等奖1项、二、三等奖共5项。获得国家发明专利28项，软件成果登记3项。出版教材著作7部，发表论文被SCI、EI检索120余篇。培养了一批通信人才，获得国家级教学成果二等奖2项，重庆市教学成果4项。\n\n
        </string>

    <string name="text_professor_tang">
        ### 张 欣欣\n
        >  博士，教授，移动通信技术重庆市重点实验室常务副主任，四川省南充市人。 \n\n
        　　1990年毕业于四川大学物理系，1995年于四川大学获理学硕士，2003年于重庆大学获工学博士。1995年7月至今在重庆邮电大学从事教学和科研工作，2008年-2009年在加拿大Mcgill大学访问研究一年。教育部“移动信息终端与测试技术”创新团队主要成员，重庆市高校优秀中青年骨干教师，重庆市高校优秀教学团队主要成员，国家级精品课程《现代交换原理》骨干成员，重庆市双语示范课程《数字电路与逻辑设计》负责人。\n\n
        　　主要研究方向包括移动通信技术、计算机网络，公开发表学术论文70余篇，其中核心级刊物及以上30余篇，作为项目负责人/合作单位负责人获得了国家科技重大专项、重庆市信息制造业重大科技专项、教育部高级访问学者基金、教育部春晖计划、重庆市自然科学基金、重庆市教委科学科学技术研究基金、重庆市移动通信重点实验室开放基金、重庆邮电大学科技基金的资助，以子课题负责人或主研身份参加了国家863项目“移动IP与MPLS结合的网络体系结构及关键技术”、国家科技重大专项“IMT-Advanced新型无线网络技术研发”、863重点项目“基于TD-SCDMA的集群通信关键技术和系统”、国家自然科学基金项目“协同中继系统跨层资源分配与优化调度的理论及方法” 等项目的研发工作。\n\n
        </string>
    <string name="text_time_communicate">
         #### 固定时间\n\n
        * 具体交流时间由各个项目组议定，保持每周至少一次交流与开发时间；固定时间交流需要形成交流纪要与照片\n\n
         #### 灵活时间\n\n
        * 按照课题、项目进度，设立灵活交流时间，可以采用QQ、邮件、视频会议等形式进行，需要形成交流纪要\n\n
         #### 讲授时间\n\n
        * 理论学习阶段，可以根据涉及知识点的不同，设立跨小组、跨项目的统一讲授时间，可以采用实地、网络、信息流等形式进行\n\n
         #### 实践时间\n\n
        * 统一开发实践时间，由标准固定时间组成，在实践时间中进行工位开发与讨论，使用研究中心提供设备进行开发与问题集中讨论\n\n</string>
    <string name="text_platform_rules">
         #### 学员报到\n\n
        * 学员须提前做好规划，按规定准时报到；\n\n
        * 若有特殊原因无法按时报到，必须提前向牵头人备案，报到后再补齐相关手续；\n\n
        * 未按时报到者，课时按旷课登记；\n\n
        * 从规定开课时间计，超过4周次未完成报到者，退回学员原单位；\n\n
        #### 考勤制度\n\n
        * 项目开展期间必须严格遵守平台的考勤，凡因病、因事不能参加项目的必须提前办理请假手续；\n\n
        * 按约定时间，由各项目组进行出勤管理，迟到、早退超过2小时视为旷勤一次；\n\n
        * 考勤数据为周报制，主管每周汇总上报考勤数据，作为备案；每月向学员学校邮件报送考勤表一次；\n\n
        * 参训学员因病请假须持医生诊断证明，无特殊情况不予休假；\n\n
        * 参训学员需临时请假必须提前邮件告知项目主管；\n\n
        * 未请假或请假未批准而不参加项目者按旷勤处理；\n\n
        * 旷勤超过4次者，由项目主管进行训诫与约谈，形成纪要；旷勤超过6次者，由研究中心运营团队进行约谈与训诫，形成纪要并报送学员单位；旷勤超过8次者，由研究中心首席运营专责进行约谈与训诫，形成纪要并通报研究中心、学员单位取消工位、工作证、学员名牌、追求卓越宣言、追回研究中心纪念品；旷勤超过10次者，取消学员资格，退回学员原单位，并报送原单位、教委备案，提请更换项目成员或做不合格处理；\n\n
        #### 实践开发制度\n\n
        * 学员在受训时间内，专用教室、工位、开发设备统一配发，相对固定；\n\n
        * 实践时须服从项目组统一的指导与管理，遵守纪律，保持桌面整齐并摆放相关物品。禁止在研究中心内吸烟，禁止带领无关人员进入中心；\n\n
        * 自觉爱护研究中心设施。不得随意移动电脑位置，严禁拆开机箱及其附件；严禁将任何附件（如鼠标、键盘、电线板等）带出；严禁学员修改或删除硬盘上的系统软件与应用软件、电脑系统原有设置；\n\n
        * 实践开发由各项目组组织推进并记录；
    </string>
    <string name="text_arrange1">
        #### 项目目标\n\n
        * 学员系统掌握项目组织与开发基本技能；\n\n
        * 学员完整参与整个项目，获得科研资料获取，项目推进等基本练习；\n\n
        * 学员完成可交付项目并形成项目报告，通过项目答辩并争取市级奖励名次；\n\n
        #### 进度安排\n\n
        * 理论知识、科研基本训练约12周次；\n\n
        * 项目介入与全面完成约23周次；\n\n
        * 答辩准备、项目调试与交付约 5周次；\n\n
        #### 交付成果\n\n
        * 可独立运行、完整且可展示项目一套；配套说明书一套；\n\n
        * 科学研究报告一套，学员总结、评价表、项目表若干；\n\n
        * 能够初步了解信息技术应用与科研项目推进流程，具备一定的开发能力；\n\n
        #### 项目组安排\n\n
        * 项目阶段学员编入项目组，具体由项目牵头人负责（具体划分名单见通讯录）\n\n
    </string>
    <string name="text_arrange2">##### 领取资料和信息应答项\n\n
        * 雏鹰手册  追求卓越宣言  雏鹰平台工作证   考勤系统登记   研究中心纪念品   工位安排与名牌   证统一VI与邮箱   项目组划分信息   项目组开发设备配置\n\n</string>
    <string name="contract">联系人</string>
    <string name="text_introduce_page1">####各位雏鹰学员，好！\n\n
        &#8195;欢迎进入重邮移动互联网应用工程研究中心，我中心隶属教育部移动通信重点实验室，通过多年的建设，我中心已成为重庆邮电大学通信与信息工程学院学生创新创业实践基地、全国首批“移动互联网创新教育基地”，依托通信与信息工程学院“科研团队”培养规划，通过校级学生科技创新计划、院级教学改革立项、院级产业开发等项目给予重点的支撑，中心已经形成固定研发平台、支撑团队、孵化团队、项目储备、技术输出结合的梯队建设规模，努力为重庆邮电大学移动互联网应用水平提升探索路径。
　　</string>

    <string name="text_introduce_page2">
        &#8195;“雏鹰计划”是重庆市教委同高校重点研究所共同打造的面向高中生的科研能力培养项目，大家进入高校接触和了解大学生活和科技创新工作，你的加入，也是我们相互学习，共同提升的基础，希望在一年时间的相处中，你能够从各位经验丰富的导师身上，汲取到真正ICT工程师、开发者的能力，我们也努力将良好的科研习惯与态度传递给你。在今后项目的开展过程中，愿你能收获认真和严谨，收获知识和朋友。为自己学业效力与专业实力的提升打下坚实的基础。\n\n
        &#8195;大家一起加油！体验做专业的研发工程师！\n\n
　　</string>
    <string name="text_nexuslink">
        重邮移动互联网应用工程研究中心运营团队
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">项目管理</string>
    <string name="nmid">重邮 移动互联网应用工程研究中心</string>
    <string name="nmid_email">nexuslink@nexuslink.cn</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="others">其他</string>
    <string name="menu_release">发布</string>

    <string name="error_network">更新失败,请检查网络连接</string>
    <string name="nexuslink">NexusLink</string>
    <string name="sign_in">登录</string>
    <string name="register_in">注册</string>
    <string name="register">账号注册</string>
    <string name="loading">加载中...</string>
</resources>
