<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/maillist128"
            android:title="@string/mailList" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/managerbook128"
            android:title="@string/book" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/professor128"
            android:title="@string/team" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/table"
            android:title="@string/table" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/about"
                android:title="关于" />
        </menu>
    </item>

</menu>
