<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="16dp"
                android:id="@+id/imageView3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/logo256"
                android:layout_marginRight="16dp" />
            <TextView
                android:textSize="28sp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"
                android:text="@string/nexuslink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:hint="请输入您的手机号"
                android:inputType="number"
                android:maxLength="11"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="请输入您的密码"
                android:inputType="textPassword"
                android:maxLength="6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/login_send_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            tools:targetApi="lollipop" />

        <Button
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="#00000000"
            android:id="@+id/login_signup_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_linear"
        android:layout_marginRight="16dp">




    </LinearLayout>

    <Button
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:textColor="@color/colorPrimary"
        android:id="@+id/login_visitor_button"
        android:backgroundTint="@color/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop"
        android:text="游客进入"
        android:layout_marginEnd="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp" />

    <Button
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:textColor="@color/secondary_text"
        android:layout_marginStart="16dp"
        android:id="@+id/login_forget_button"
        android:backgroundTint="@color/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop"
        android:text="忘记密码？"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:id="@+id/login_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTranslucence"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>